--- a/css/style.css
+++ b/css/style.css
@@ -44,11 +44,21 @@ nav a:hover{
   -webkit-transition: top 1s ease-out;
   transition: top 1s ease-out;
   z-index: 1;
+  position: absolute;
+  top: -40px;
+  overflow: hidden;
 
   /*Your code here - position relative to the parent */
-  /*Your code here - place 40px higher */;
-}
 
+}
+.skip a:focus{
+  top: 0;
+  left: 0;
+  overflow: visible;
+}
+*:focus{
+  border: 2px solid black;
+}
 /*Your code here*/
 /*Add the selector and rule to move the skip
 link to the exact top of the page.*/
@@ -72,8 +82,10 @@ nav{
   background-color: #ddd;
   padding: 20px 0;
   text-align: left;
-  grid-column: 1/span -1;
-  grid-row: 1/span 1;
+  grid-column: 1/ -1;
+  grid-row:1;
+
+
   /*Your code here*/
   /*Span the top row*/
 
@@ -85,11 +97,11 @@ header{
   background-repeat: no-repeat; /* Parallax effect */
   background-size: cover;       /* Parallax effect */
   color: white;
-  height: 400px;                /* Parallax effect */
-  grid-column: 1/ span 1;
+  height: 400px;
+  grid-column: 1/ -1;               /* Parallax effect */
   grid-row: 2/span 1;
-  background-image: url("image/header.jpeg");
-
+  background-image: url("../images/header.jpg");
+  background-repeat: no-repeat;
   /* Your code here */
   /* Set background-image to header.jpg in the images folder */
   /* Span one row */
@@ -104,22 +116,17 @@ header p{
 
 
 .container{
-  / display: grid;
+  display:grid;
   grid-template-columns: 100px 400px 100px;
-  grid-template-rows: 30px 5fr 100px;
-  column-gap: 15px;
+  grid-template-rows: 30px repeat(5,auto) 100px;
+  grid-row-gap: 15px;
 
-    *Your code here  */
+  /*Your code here  */
   /* See documentation for mobile view */
 
 }
 .about, .method, .clients, .contact{
-  grid-template-columns: 2/1;
-  grid-template-rows: 3/span 1;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+  grid-column: 2/span 1;
 
   /*Your code here */
   /* See documentation for mobile view */
@@ -127,22 +134,15 @@ header p{
 }
 
 .about-image, .method-image, .clients-image, .contact-image{
-  grid-template-columns: 1/span -1;
+  grid-column: 1/ -1;
   max-height: 700px;
   overflow: hidden;
-  grid-template-rows: 3/span 1;
    /*Your code here */
    /* See documentation for mobile view */
 }
 
 .about, .about-image{
-  grid-columns: 2/span -1;
-  max-height: 700px;
-  grid-row: 3/span 1;
-  grid-row: 4/ span 1;
-  grid-row: 5/span 1;
-  overflow: hidden;
-  justify-content: center;
+  grid-row: 3/ span 1;
 
   /*Your code here */
   /* See documentation for mobile view */
@@ -150,37 +150,21 @@ header p{
 }
 
 .method, .method-image{
-  grid-column: 1/span -1;
-  max-height: 700px;
-  grid-row: 3/span 1;
   grid-row: 4/ span 1;
-  grid-row: 5/span 1;
-  overflow: hidden;
-
   /*Your code here */
   /* See documentation for mobile view */
 }
 
 
 .clients, .clients-image{
-  grid-column: 1/span -1;
-  max-height: 700px;
-  grid-row: 3/span 1;
-  grid-row: 4/ span 1;
-  grid-row: 5/span 1;
-  overflow: hidden;
+  grid-row: 5/ span 1;
   /*Your code here */
   /* See documentation for mobile view */
 }
 
 
 .contact, .contact-image{
-  grid-column: 1/span -1;
-  max-height: 700px;
-  grid-row: 3/span 1;
-  grid-row: 4/ span 1;
-  grid-row: 5/span 1;
-  overflow: hidden;
+  grid-row: 6/ span 1;
   /*Your code here */
   /* See documentation for mobile view */
 }
@@ -189,9 +173,8 @@ header p{
   background-color: rgba(255, 255, 255, .8);
   border: 10px solid black;
   padding: 30px;
-  text vertical-align:center;
-  text-align: center;
-  align-content:
+  justify-self: center;
+  align-self: center;
 
   /*Your code here:*/
   /*Align the content in the center */
@@ -203,9 +186,9 @@ header p{
 @media all and (min-width: 800px){
 
   .container{
-  
-
-
+    display: grid;
+    grid-template-columns: 50px auto 500px auto 50px;
+    grid-template-rows: 70px repeat(5, 400px) 100px;
   /*Your code here */
   /* See documentation for desktop view */
   }
@@ -218,14 +201,13 @@ header p{
   }
 
   .about, .clients, .method-image, .contact-image{
-    text-
-
+    grid-column: 3/span 2;
   /*Your code here */
   /* See documentation for desktop view */
   }
 
   .about-image, .clients-image, .method, .contact{
-
+    grid-column: 2/ span 2;
     /*Your code here */
     /* See documentation for desktop view */
     }
